@@ -1,3 +1,7 @@
+2018-09-09  Karl Berry  <karl@tug.org>
+
+	* luaerror.test: LC_ALL=LANGUAGE=C.
+
 2018-07-21 Luigi Scarso <luigi.scarso@gmail.com>
 	
 	* Adapted for Lua 5.3.5
